syntax = "proto3";

package bs.tcp;
option go_package="go_game/protodefine/tcpnet";
import "protodefine/mytype/types.proto";

enum CMDID_Tcp{
    IDUnknow = 0;
    IDTCPTransferMsg = 1;
    IDTCPSessionCome = 2;
    IDTCPSessionClose = 3;
    IDTCPSessionKick = 4;

    IDLast=100;
};

message TCPTransferMsg{
    types.BaseInfo base = 1;
    uint32 data_kind_id = 2;
    uint32 data_sub_id = 3;
    bytes  data = 4;
};

message TCPSessionCome{
	types.BaseInfo base = 1;
};

message TCPSessionClose{
	types.BaseInfo base = 1;
};

message TCPSessionKick{
	types.BaseInfo base = 1;
};